tests/compile/child_two_dynamic_methods.stderr
error: at most one dynamic #[child] method is allowed per activation impl; found 2: first, second
  --> tests/compile/child_two_dynamic_methods.rs:29:1
   |
29 | / impl Solar {
30 | |     #[plexus_macros::method]
31 | |     async fn ping(&self) -> impl Stream<Item = String> + Send + 'static {
32 | |         stream! { yield "pong".into(); }
...  |
44 | | }
   | |_^
